# JuniorAGI_SDK

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  sovereign_manifest.json
benchmarks/: run_mlx_benchmark.py  scaling_test.py  sustained_load.py  ternary_validation.py
scripts/: convert_model.py  ignite_swarm.sh  sdk_harvester.py  verify_tiny.py
src/: cli.py  main.py
src/api/: injection_pipeline.py  model_loader.py  node_server.py
src/core/: agentic_tools.py  compute_economy.py  model_bridge.py
src/enterprise/: audit_ledger.py  node_server.py
src/fetch/: data_pipeline.py  ingester.py  omni_inference.py  optical_ingester.py  private_streams.py  quant_feed.py  sensory_streams.py  smtp_mesh.py
src/inference/: agentic_router.py  bitnet_layers.py  transformer_block.py
src/inference/mps_optimized/: engine.py
src/infrastructure/: distributed_mesh.py  hardware_matrix.py
src/junioragi/: reflection_engine.py
src/kernel/: agi_kernel.py  autonomic_daemon.py
src/manifolds/: actuator_mesh.py  acutator.py  agi_logistics.py  alignment.py  base.py  curiosity.py  dynamic_compiler.py  empirical.py  exosphere.py  freeman_ladder.py  genesis.py  hive.py  horizon.py  junior_fetch.py  junior_home.py  juniorquant.py  logistics.py  morphogenesis.py  omega_structural.py  relational.py  sandbox.py  sovereignty.py  spatial.py  spectral_tda.py  temporal_gamma.py
src/memsys/: neuroplasticity.py  sovereign_identity.py  topological_graph.py  topological_synapse.py
src/sandbox/: llm_bridge.py
src/synapse/: memory_palace.py
src/ui/: agi_dashboard.py  conversion_dashboard.py  juniorhome_server.py
