[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JuniorAGI_SDK"
version = "0.84.0"
description = "Sovereign Edge-Native AGI Substrate (Apple Silicon Optimized)"
authors = [{name = "JuniorCloud LLC"}]
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.10.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "psutil>=5.9.0",
    "gradio>=4.20.0"
]

[project.optional-dependencies]
dev = ["pytest", "mlx-lm>=0.11.0"]

[project.scripts]
junioragi-convert = "cli:run_converter"
junioragi-server = "cli:run_server"

[tool.setuptools.packages.find]
where = ["src"]
