[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JuniorAGI_SDK"
version = "0.87.0"
description = "Sovereign Edge-Native AGI Substrate (Ternary Converter Engine)"
authors = [{name = "JuniorCloud LLC"}]
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.10.0",
    "mlx-lm>=0.11.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
junioragi-convert = "cli:run_converter"
junioragi-chat = "cli:run_chat"

[tool.setuptools.packages.find]
where = ["src"]
