[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JuniorAGI_SDK"
version = "0.88.0"
description = "Sovereign Edge-Native AGI Substrate (Ternary Converter Engine)"
authors = [{name = "JuniorCloud LLC"}]
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.10.0",
    "mlx-lm>=0.11.0",
    "fastapi>=0.109.0",
    "psutil>=5.9.0"
]

[project.scripts]
junioragi-convert = "cli:run_converter"
junioragi-chat = "cli:run_chat"
junioragi-verify = "scripts.verify_tiny:main"

[tool.setuptools.packages.find]
where = ["src"]
